add notes for configuring maven memory